--- a/RayTracer/RayTracer.fsproj
+++ b/RayTracer/RayTracer.fsproj
@@ -6,7 +6,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Program.fs"/>
+        <Compile Include="Color.fs" />
+        <Compile Include="Ray.fs" />
+        <Compile Include="Camera.fs" />
+        <Compile Include="Program.fs" />
     </ItemGroup>
 
 </Project>
